--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.3",
+    "axios": "^1.9.0",
     "framer-motion": "^12.6.5",
     "lucide-react": "^0.507.0",
     "motion": "^12.9.4",
