--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.6.5",
     "lucide-react": "^0.507.0",
     "motion": "^12.9.4",
@@ -26,6 +27,7 @@
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "zod": "^3.24.2"
   },
