--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@hookform/resolvers": "^5.0.1",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.3",
+    "@tanstack/react-query": "^5.83.0",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "emoji-picker-react": "^4.13.2",
     "framer-motion": "^12.6.5",
     "lucide-react": "^0.507.0",
     "motion": "^12.9.4",
@@ -30,6 +32,7 @@
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tw-merge": "^0.0.1-alpha.3",
